* Huge speed up in up-to-date detection algorithm.
* New MapperSchemeHandler to translate schemes and/or pathes, to be used in
  "source" and "javadoc" scheme.
* New experimental default schemes "source" and "javadoc", that will try to
  provided sources and javadoc for any given dependency, e.g. 
  "source:mvn:a.b.1" will be translated to "mvn:a.b.1;classifier=sources"
* Fixed --fsc option.

SBuild 0.4.0 - 2013-03-09

* Fixed --dependencyTree not showing up on when not used with --verbose.
* Added new commandline option --list-modules to show a list of all involved
  modules (sub-projects).
* Based up-to-date detection of phony targets on virtual last modified time
  stamps instead of boolean marker.
* Reworked preorder dependency algorithm.
* Improved internally used download function, which now handles successful
  download more efficiently and does not leave temp file on download failures.
  This improves all scheme handlers as well.
* Added new commandline options --check and --check-recursive to check all 
  defined targets for cycles and potentially missing scheme handlers. This
  will also detect projects with cacheable targets, that do not define an
  evictCache target.
* Added new class Module which can be used to easily create target references
  to targets in that module with Module.targetRef(String) and
  Module.targetRefs(String*).
* Module() and Modules() now return a Module resp. Seq[Module].
* Deprecated Module.apply(String*) as the return value differs from
  Module.apply(String), which is not obvious. Use Modules.apply() instead.
* Build script compiler now emits deprecation warnings.
* SBuild now has slightly colored output based on jansi.fusesource.org, which
  can be disabled with --no-color commandline option.
* Improved error reporting on the commandline.
* Added TargetContext.attachFile to attach additional files to a target. Those
  files are now also included via TargetRef.files.