@@ -907,6 +907,7 @@ class SBuildRunner {
   import org.fusesource.jansi.Ansi._
   import org.fusesource.jansi.Ansi.Color._
 
+  // It seems, under windows als bright colors are not displayed correctly
   val isWindows = System.getProperty("os.name").toLowerCase().contains("win")
 
   def fPercent(text: => String) =
@@ -915,7 +916,11 @@ class SBuildRunner {
   def fTarget(text: => String) = ansi.fg(GREEN).a(text).reset
   def fMainTarget(text: => String) = ansi.fg(GREEN).bold.a(text).reset
   def fOk(text: => String) = ansi.fgBright(GREEN).a(text).reset
-  def fError(text: => String) = ansi.fgBright(RED).a(text).reset
-  def fErrorEmph(text: => String) = ansi.fgBright(RED).bold.a(text).reset
+  def fError(text: => String) =
+    if (isWindows) ansi.fg(RED).a(text).reset
+    else ansi.fgBright(RED).a(text).reset
+  def fErrorEmph(text: => String) =
+    if (isWindows) ansi.fg(RED).bold.a(text).reset
+    else ansi.fgBright(RED).bold.a(text).reset
 
 }
